--- a/Code/Barchart2.html
+++ b/Code/Barchart2.html
@@ -43,7 +43,7 @@
 
             var parseTime = d3.timeParse("%d/%m/%Y");
 
-            d3.csv('https://raw.githubusercontent.com/tevose/COMP1101-Assignment2/main/RegionHospitalCases.csv?token=ARB722ZEA54TBXJUS3BX7UTAPWT4U').then(data => {
+            d3.csv('https://raw.githubusercontent.com/tevose/Learning-d3/main/Data/RegionHospitalCases.csv').then(data => {
                 
                 var allGroup = ["England", "Northern Ireland", "Scotland", "Wales"]
 
