--- a/Code/LineGraph.html
+++ b/Code/LineGraph.html
@@ -57,7 +57,7 @@
 
             var parseTime = d3.timeParse("%d/%m/%Y");
 
-            d3.csv('https://raw.githubusercontent.com/tevose/COMP1101-Assignment2/main/hospitalCases.csv?token=ARB7225QQRCL44A7VPMT473APF6EI').then(data => {
+            d3.csv('https://raw.githubusercontent.com/tevose/Learning-d3/main/Data/hospitalCases.csv').then(data => {
                 data.forEach(function(d){
                     d.date = parseTime(d.date);
                     d.hospitalCases = +d.hospitalCases
